--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>死會的IVY ฅ(･ิᴥ･ิ)ฅ|Connection</title>
+    <title>ฅ(･ิᴥ･ิ)ฅ|Connection</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="favicon.ico">
