--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
             document.getElementById(d).className = "";
         }
     </script>
-    <style></style>
+    <style>
+        body{
+            overflow-x: hidden;
+            max-width: 100vw;
+        }
+    </style>
 </head>
 
 <body>
