--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
     </script>
     <style>
         body{
-            overflow-x: hidden;
-            max-width: 100vw;
+            overflow-x: hidden !important;
+            max-width: 100vw !important;
+        }
+        .ac{
+            max-width: 100vw !important;
         }
     </style>
 </head>
@@ -253,7 +256,7 @@
                 <p>jquery、JavaScript：lightbox、Switch between day and night</p>
             </div>
         </div>
-        <div class="row" data-aos="fade-right" data-aos-anchor-placement="center-center">
+        <div class="row" data-aos="fade-right">
             <col>
         </div>
         <div class="row">
