--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container" style="overflow-x: height; max-width: 100vw;">
         <div class="row ac">
             <div class="col">
                 <!-- <h3>﹀﹀﹀請 往 下 滾 動﹀﹀﹀</h3> -->
