--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </head>
 
 <body>
-    <header class="aa">
+    <header class="aa" style="overflow-x: height; max-width: 100vw;">
         <!-- 回首頁標籤 -->
         <div class="container a0">
             <div class="row">
@@ -70,7 +70,7 @@
             </div>
         </div>
         <!-- 漢堡導覽列 -->
-        <div class="container fixed-top" style="overflow-x: height; max-width: 100vw;">
+        <div class="container fixed-top">
             <div class="row">
                 <div class="col justify-content-lg-center d-lg-flex">
                     <nav class="navbar navbar-expand-lg navbar1 bg1">
