--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
         .ac{
             max-width: 100vw !important;
         }
+        @media (max-width:575px) {
+            .container.fixed-top{
+                margin: 0;
+            }
+        }
     </style>
 </head>
 
